@@ -4553,6 +4553,7 @@ to the same position later.
 * MoveEOF::
 * MoveSOF::
 * MoveEOW::
+* MoveSOW::
 * MoveIncUp::
 * MoveIncDown::
 * AdjustView::
@@ -4853,8 +4854,28 @@ of file).
 @noindent Abbreviation: @code{EOW}
 
 @noindent moves the cursor one character past the end of the current word.
+If the cursor is not currently in a word, it retains its current location.
 
 @code{MoveEOW} is extremely useful in macros, because it allows you to copy
+precisely the word the cursor is on.
+@ifclear autohelp
+@xref{Hints and Tricks}.
+@end ifclear
+
+
+
+
+@node MoveSOW
+@subsection MoveSOW
+@cmindex MoveSOW
+
+@noindent Syntax: @code{MoveSOW}@*
+@noindent Abbreviation: @code{SOW}
+
+@noindent moves the cursor to the first character of the current word.
+If the cursor is not currently in a word, it retains its current location.
+
+@code{MoveSOW} is useful in macros, because it allows you to copy
 precisely the word the cursor is on.
 @ifclear autohelp
 @xref{Hints and Tricks}.
