@@ -15,6 +15,8 @@ unreleased
   * FIND in string inputs brings up a requester with your input history.
     Use Enter to replace, TAB to insert into your input line; Escape to exit.
 
+  * New commands: MoveSOW, NextWordEnd, PrevWordEnd.
+
 3.1.2 2018-10-06
 
   * RepeatLast now accepts "Find" or "Replace" after its optional number so
